security: remove .env and add .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,8 @@
-VITE_SUPABASE_URL=your-supabase-url
-VITE_SUPABASE_ANON_KEY=your-supabase-anon-key
+# Supabase Configuration
+VITE_SUPABASE_URL=your_supabase_project_url
+VITE_SUPABASE_ANON_KEY=your_supabase_anon_key
+
+# Additional configurations can be added here
+# Example:
+# VITE_API_URL=http://localhost:3000
+# VITE_ENABLE_FEATURE_X=true
