--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.39.7",
     "date-fns": "^4.1.0",
+    "framer-motion": "^10.16.4",
+    "gsap": "^3.12.2",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
+    "react-intersection-observer": "^9.5.2",
     "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
